--- a/Infinity Games/projeto infinity/src/view/Perfil.form
+++ b/Infinity Games/projeto infinity/src/view/Perfil.form
@@ -50,6 +50,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="CampoEmail">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="71" red="52" type="rgb"/>
         </Property>
@@ -149,7 +150,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="190" y="630" width="-1" height="-1"/>
+          <AbsoluteConstraints x="120" y="630" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
