--- a/Infinity Games/projeto infinity/src/view/Biblioteca.form
+++ b/Infinity Games/projeto infinity/src/view/Biblioteca.form
@@ -74,5 +74,17 @@
         </Constraint>
       </Constraints>
     </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/image/Tela Biblioteca.png"/>
+        </Property>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="0" y="-4" width="1200" height="700"/>
+        </Constraint>
+      </Constraints>
+    </Component>
   </SubComponents>
 </Form>
